--- a/features.html
+++ b/features.html
@@ -13,7 +13,7 @@
         <img src="gamelogo.png" id="logo-navbar" alt="awc-logo">
         <nav>
             <ul><!--Navigation Links-->
-                <li><a href="home-index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="features.html">FEATURES</a></li>
                 <li><a href="landing.html">GAMEPLAY</a></li>
