--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <!--Navigation Links-->
-                <li><a href="home-index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="features.html">FEATURES</a></li>
                 <li><a href="landing.html">GAMEPLAY</a></li>
