--- a/features.html
+++ b/features.html
@@ -59,7 +59,7 @@
     <div class="container">
          <!--Image under-->
         <div class="img">
-            <img src="story.gif" alt="meaningful-puzzle-gif" id="img">
+            <img src="Story.gif" alt="meaningful-puzzle-gif" id="img">
         </div>
     </div>
 
